--- a/src/app/pages/notfound/notfound.component.html
+++ b/src/app/pages/notfound/notfound.component.html
@@ -1,1 +1,4 @@
-<p>notfound works!</p>
+<div class="text-center mt-24">
+  <h1 class="text-2xl">404 - Page Not Found</h1>
+  <p class="text-lg text-color-[#666]">The page you are looking for does not exist.</p>
+</div>
