--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -1,3 +1,27 @@
-<p>admin works!</p>
-<app-petregistration/>
-<app-pets-list/>
+<div class="container mx-auto p-6 bg-gray-100 min-h-screen">
+  <!-- Header -->
+  <div class="bg-white shadow-md rounded-lg p-6 mb-6">
+    <h1 class="text-3xl font-semibold text-center text-gray-800 mb-4">Registered Pets</h1>
+    <!-- Search Input -->
+    <div class="relative">
+      <input
+        type="text"
+        [(ngModel)]="searchQuery"
+        (ngModelChange)="onSearch($event)"
+        class="w-full p-3 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 transition duration-150 ease-in-out"
+        placeholder="Search by pet name or tutor name"
+      />
+    </div>
+  </div>
+
+  <!-- Pets List -->
+  <div class="bg-white shadow-md rounded-lg p-6 mb-6">
+    <app-pets-list [pets]="pets" [isLoading]="isLoading" [notFoundMessage]="notFoundMessage"/>
+  </div>
+
+  <!-- Pet Registration -->
+  <div class="bg-white shadow-md rounded-lg p-6">
+    <app-petregistration/>
+  </div>
+</div>
+
