Adiciona modelos ngModel e ngModelChange para busca de produtos

--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -4,6 +4,8 @@
     type="text"
     class="w-full p-2 border border-gray-300 rounded"
     placeholder="Search product"
+    [(ngModel)]="searchQuery"
+    (ngModelChange)="onSearchProduct($event)"
     />
   </div>
 </div>
