adiciona a div para exibir a mensagem de not found

--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -9,4 +9,7 @@
     />
   </div>
 </div>
+<div *ngIf="notFoundMessage" class="mt-4 p-2 bg-green-100 text-green-800 rounded text-center">
+  {{ notFoundMessage }}
+</div>
 <app-products-card [cards]="cards" [isLoading]="isLoading" [notFoundMessage]="notFoundMessage"></app-products-card>
